--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -32,21 +32,11 @@ jobs:
           haxelib install flixel
           haxelib run lime setup flixel
           haxelib run lime setup
-          haxelib install flixel-tools
           haxelib install flixel-addons
           haxelib install flixel-ui
           haxelib install hscript
           haxelib install flixel-addons
-          haxelib install newgrounds
-          haxelib git faxe https://github.com/uhrobots/faxe
-          haxelib git polymod https://github.com/MasterEric/polymod.git
-          haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
-          haxelib git extension-webm https://github.com/KadeDev/extension-webm
-          haxelib run lime rebuild extension-webm windows
-          haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit.git
-          haxelib git hxvm-luajit https://github.com/nebulazorua/hxvm-luajit
-          haxelib git flixel-addons https://github.com/HaxeFlixel/flixel-addons
-          haxelib install actuate 
+          haxelib list
           haxelib run lime build html5
           
       - uses: actions/upload-artifact@v2
