--- a/.github/workflows/windows2.yml
+++ b/.github/workflows/windows2.yml
@@ -36,6 +36,7 @@ jobs:
           haxelib install flixel-ui
           haxelib install hscript
           haxelib install flixel-addons
+          haxelib install swf 3.0.2
           haxelib list
           haxelib run lime build windows
           
