--- a/.github/workflows/windows2.yml
+++ b/.github/workflows/windows2.yml
@@ -43,4 +43,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: Windows Build
-          path: export/release/windows/bin
+          path: export
