--- a/.github/workflows/html5.yml
+++ b/.github/workflows/html5.yml
@@ -43,4 +43,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: Html5 Build
-          path: export/release/windows/bin
+          path: export
